castor upgraded