@@ -1,4 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
+>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>castor-xml-schema</artifactId>
@@ -19,7 +23,7 @@
 
     <build>
     	<resources>
-      <!-- 
+      <!--
             <resource>
                 <directory>src/main/resources</directory>
                 <excludes>
@@ -40,8 +44,10 @@
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>castor-maven-plugin</artifactId>
              <configuration>
-                <schemaDirectory>${basedir}/src/main/resources/org/exolab/castor/xml/schema/annotations</schemaDirectory>
-                <properties>${basedir}/src/main/resources/org/exolab/castor/xml/schema/annotations/annotations.properties</properties>
+                <schemaDirectory
+                    >${basedir}/src/main/resources/org/exolab/castor/xml/schema/annotations</schemaDirectory>
+                <properties
+                    >${basedir}/src/main/resources/org/exolab/castor/xml/schema/annotations/annotations.properties</properties>
              </configuration>
              <executions>
                 <execution>
@@ -51,6 +57,55 @@
                 </execution>
              </executions>
           </plugin>
+          <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+             <artifactId>maven-surefire-plugin</artifactId>
+             <configuration>
+                <argLine
+                    >--add-opens java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED</argLine>
+             </configuration>
+          </plugin>
+
+              <!-- JaCoCo agent -->
+              <plugin>
+                  <groupId>org.jacoco</groupId>
+                  <artifactId>jacoco-maven-plugin</artifactId>
+                  <version>0.8.11</version>
+                  <executions>
+
+                      <!-- Attach agent BEFORE tests -->
+                      <execution>
+                          <id>prepare-agent</id>
+                          <goals>
+                              <goal>prepare-agent</goal>
+                          </goals>
+                      </execution>
+
+                      <!-- Generate per-module report -->
+                      <execution>
+                          <id>report</id>
+                          <phase>verify</phase>
+                          <goals>
+                              <goal>report</goal>
+                          </goals>
+                      </execution>
+
+                  </executions>
+              </plugin>
+
+              <!-- Surefire: allow build to continue even if tests fail -->
+              <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <version>3.2.5</version>
+                  <configuration>
+                      <!-- KEY SETTING -->
+                      <testFailureIgnore>true</testFailureIgnore>
+
+                      <!-- JaCoCo hook -->
+                      <argLine>${argLine}</argLine>
+                  </configuration>
+              </plugin>
        </plugins>
     </build>
 
@@ -60,12 +115,12 @@
             <groupId>org.codehaus.castor</groupId>
             <artifactId>castor-core</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>org.codehaus.castor</groupId>
             <artifactId>castor-xml</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>org.codehaus.castor</groupId>
             <artifactId>castor-xml-diff</artifactId>
@@ -76,10 +131,28 @@
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -87,10 +160,17 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-1.2-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.12.4</version>
             <scope>test</scope>
         </dependency>
 
